--- a/components/AboutMe/AboutMe.module.css
+++ b/components/AboutMe/AboutMe.module.css
@@ -1,17 +1,24 @@
-.sectionSubtitleAbout {
+.aboutMe {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+.sectionTitle {
+	margin-bottom: 0.25em;
+}
+
+.sectionSubtitle {
+	margin: 0;
+	font-size: var(--fs-h3);
 	background: var(--clr-accent);
 	padding: 0.25em 1em;
 	font-family: var(--ff-secondary);
 	margin-bottom: 1em;
 }
 
-.aboutMe {
-	max-width: 1000px;
-	margin: 0 auto;
-}
-
 .aboutMeImg {
 	box-shadow: var(--bs);
+	object-fit: contain;
 }
 
 @media (min-width: 600px) {
@@ -25,11 +32,11 @@
 		grid-column-gap: 2em;
 	}
 
-	.sectionTitleAbout {
+	.sectionTitle {
 		grid-area: title;
 	}
 
-	.sectionSubtitleAbout {
+	.sectionSubtitle {
 		grid-column: 1 / -1;
 		grid-row: 2;
 		position: relative;
