--- a/components/MyWork/MyWork.module.css
+++ b/components/MyWork/MyWork.module.css
@@ -1,19 +1,26 @@
+.myWork {
+	text-align: center;
+}
+
 .sectionTitle {
-  margin-bottom: .25em;
+	margin-bottom: 0.25em;
+	text-shadow: var(--bs);
 }
 
 .sectionSubtitle {
-  margin: 0;
-  font-size: var(--fs-h3);
-}
-
-.myWork {
-  background-color: var(--clr-dark);
-  color: var(--clr-light);
-  text-align: center;    
+	margin: 0 4rem;
+	font-size: var(--fs-h3);
+	margin-bottom: 1em;
+	padding: 0.25em 1em;
+	background: var(--clr-accent);
+	font-family: var(--ff-secondary);
+	text-shadow: var(--bs);
 }
 
 .portfolio {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	padding-top: 60px;
+	display: grid;
+	gap: 10px;
+	position: relative;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
