--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -6,14 +6,24 @@
 	align-items: center;
 	color: var(--white);
 	position: fixed;
-	z-index: 2;
-
+	z-index: 10;
 	background-color: var(--clr-light);
 }
 
-.logo {
-	max-width: 100px;
+.imageContainer {
+	max-width: 120px;
 	margin: 0.5rem 3rem;
+	width: 100%;
+	height: 50px;
+	position: relative;
+	cursor: pointer;
+}
+
+.logoImg {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	object-fit: contain;
 }
 
 .nav {
@@ -33,8 +43,48 @@
 	display: block;
 	color: var(--clr-dark);
 	text-decoration: none;
+	font-family: var(--ff-secondary);
+	font-size: 1.3rem;
+	text-shadow: var(--bs);
 }
 
 .nav li a:hover {
 	background: var(--clr-accent);
+}
+
+.nav li a:focus {
+	background: var(--clr-accent);
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+	.headerStyle {
+		display: block;
+		margin:0;
+		padding: 0 0 20px 0;
+	}
+
+	.imageContainer{
+		width:100%;
+		align-items: center;
+		margin:auto;
+	}
+
+	.nav{
+		display: flex;
+		justify-content: center;
+		padding: 0;
+	}
+
+	.nav ul {
+		display: flex;
+		margin:0;
+		padding: 0;
+		list-style: none;
+	}
+
+	.nav li a {
+		padding: 0.625rem 1rem;
+	}
+
 }
