--- a/components/PortfolioItem/PortfolioItem.module.css
+++ b/components/PortfolioItem/PortfolioItem.module.css
@@ -1,19 +1,21 @@
 .portfolioItem {
-  background: var(--clr-accent);
-  overflow: hidden;
-  cursor: pointer;
-  transition: 
-      transform 750ms cubic-bezier(.5, 0, .5, 1),
-      opacity 250ms linear;
+	background: var(--clr-accent);
+	overflow: hidden;
+	cursor: pointer;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 
 .portfolioItem:focus {
-  position: relative;
-  z-index: 2;
+	position: relative;
+	z-index: 2;
 }
 
 .portfolioItem:hover,
 .portfolioItem:focus .portfolioItem {
-  transform: scale(1.2);
-  opacity: .5;
+	transform: scale(1.2);
+	opacity: 0.5;
+	background: var(--clr-accent);
 }
